# clam

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Earthfile  README.md  pyproject.toml  ruff.toml
crates/abd-clam/: .bumpversion.cfg  Cargo.toml  README.md
crates/abd-clam/benches/: cakes.rs
crates/abd-clam/benches/utils/: ann_benchmarks.rs  metrics.rs  mod.rs
crates/abd-clam/examples/: cakes.rs
crates/abd-clam/src/: lib.rs  utils.rs
crates/abd-clam/src/cakes/: knn_bfs.rs  knn_dfs.rs  knn_linear.rs  knn_rrnn.rs  mod.rs  rnn_chess.rs  rnn_linear.rs
crates/abd-clam/src/cakes/approximate/: knn_dfs.rs  mod.rs
crates/abd-clam/src/cakes/exact/: knn_bfs.rs  knn_branch.rs  knn_dfs.rs  knn_linear.rs  knn_rrnn.rs  mod.rs  rnn_chess.rs  rnn_linear.rs
crates/abd-clam/src/cakes/knn/: mod.rs
crates/abd-clam/src/cakes/search/: knn_breadth_first.rs  knn_depth_first.rs  knn_hinted.rs  knn_linear.rs  knn_repeated_rnn.rs  mod.rs  rnn_clustered.rs  rnn_linear.rs
crates/abd-clam/src/cakes/selection/: mod.rs
crates/abd-clam/src/chaoda/: cluster.rs  edge.rs  graph.rs  meta_ml.rs  mod.rs  st_chaoda.rs  stc.rs  vertex.rs
crates/abd-clam/src/chaoda/algorithms/: accumulated_cardinality_ratios.rs  cc.rs  gn.rs  graph_neighborhood_size.rs  mod.rs  pc.rs  relative_cluster_cardinality.rs  relative_component_cardinality.rs  relative_vertex_degree.rs  sc.rs  sp.rs  stationary_probabilities.rs  vd.rs
crates/abd-clam/src/chaoda/graph/: component.rs  mod.rs  node.rs  par_component.rs  par_graph.rs
crates/abd-clam/src/chaoda/inference/: meta_ml.rs  mod.rs  py_models.rs
crates/abd-clam/src/chaoda/learning/: features.rs  metrics.rs  mod.rs  prediction.rs
crates/abd-clam/src/chaoda/members/: cc.rs  gn.rs  mod.rs  pc.rs  sc.rs  sp.rs  vd.rs
crates/abd-clam/src/chaoda/meta_ml/: linear_regression.rs  mod.rs
crates/abd-clam/src/chaoda/model/: chaoda.rs  mod.rs  st_chaoda.rs
crates/abd-clam/src/chaoda/tree/: mod.rs  par_tree.rs
crates/abd-clam/src/cluster/: annotations.rs  export.rs  mod.rs  partition.rs  partition_strategy.rs
crates/abd-clam/src/codec/: dataset.rs  item.rs  mod.rs  tree.rs
crates/abd-clam/src/codec/search/: mod.rs
crates/abd-clam/src/compress/: mod.rs
crates/abd-clam/src/compress/tree/: cluster.rs  mod.rs  par_tree.rs
crates/abd-clam/src/core/: ball.rs  mod.rs
crates/abd-clam/src/core/cluster/: uni.rs
crates/abd-clam/src/core/dataset/: mod.rs  vec2d.rs
crates/abd-clam/src/core/tree/: mod.rs
crates/abd-clam/src/core/utils/: mod.rs  ord_items.rs  sized_heap.rs
crates/abd-clam/src/dim_red/: mod.rs  triangle_tests.rs
crates/abd-clam/src/dim_red/physics/: mass.rs  mod.rs  spring.rs  system.rs
crates/abd-clam/src/mbed/: mod.rs
crates/abd-clam/src/musals/: cost_matrix.rs  mod.rs  msa.rs  quality_metrics.rs  sequence.rs
crates/abd-clam/src/old-chaoda/: automl_regressors.rs  metaml.rs
crates/abd-clam/src/pancakes/: mod.rs  search.rs
crates/abd-clam/src/tree/: mod.rs  node.rs  par_partition.rs  partition.rs
crates/abd-clam/src/utils/: common_metrics.rs  distance_value.rs  mod.rs  sized_heap.rs
crates/abd-clam/tests/: ball.rs  cakes.rs  cluster.rs  codec.rs  pancakes.rs  test_cakes.rs  tree.rs
crates/abd-clam/tests/common/: data_gen.rs  metrics.rs  mod.rs
crates/cakes-results/: Cargo.toml  pyproject.toml
crates/cakes-results/src/: main.rs  utils.rs
crates/cakes-results/src/genomic/: metrics.rs  mod.rs  nucleotides.rs  read_silva.rs  sequence.rs
crates/cakes-results/src/lfd_plots/: mod.rs
crates/cakes-results/src/radio/: metrics.rs  mod.rs  reader.rs
crates/cakes-results/src/vectors/: ann_datasets.rs  generate_scaled_datasets.rs  knn_search.rs  mod.rs  rnn_search.rs
crates/distances/: .bumpversion.cfg  Cargo.toml
crates/distances-two/: Cargo.toml  README.md
crates/distances-two/benches/: simd-1024.rs  simd-128.rs  simd-256.rs  simd-512.rs  vectors.rs
crates/distances-two/src/: lib.rs  std_simd.rs
crates/distances-two/src/blas/: mod.rs
crates/distances-two/src/simd/: mod.rs  traits.rs
crates/distances-two/src/std_simd/: mod.rs  num_simd.rs
crates/distances-two/src/vectors/: angular.rs  minkowski.rs  mod.rs
crates/distances-two/tests/: blas.rs  naive_impls.rs  simd.rs  vectors.rs
crates/distances/benches/: big-lp.rs  big-strings.rs  big-vectors.rs  inv-sqrt.rs  needleman-wunsch.rs  simd-cosine.rs  simd-euclidean.rs
crates/distances/src/: blas.rs  lib.rs
crates/distances/src/number/: _bool.rs  _number.rs  arithmetic.rs
crates/distances/src/sets/: mod.rs
crates/distances/src/simd/: f32x16.rs  f32x8.rs  f64x8.rs  macros.rs  mod.rs
crates/distances/src/strings/: mod.rs
crates/distances/src/vectors/: angular.rs  correlations.rs  lp_norms.rs  mod.rs  utils.rs
crates/distances/tests/: test_edits.rs  test_float.rs  test_rand_gen.rs  test_sets.rs  test_simd.rs  test_strings.rs  test_vectors_f32.rs  test_vectors_u32.rs
crates/shell/: Cargo.toml  README.md
crates/shell/src/: main.rs  utils.rs
crates/shell/src/commands/: mod.rs
crates/shell/src/data/: fasta.rs  mod.rs  npy.rs
crates/shell/src/metrics/: mod.rs
crates/shell/src/search/: mod.rs
crates/shell/src/trees/: mod.rs
crates/symagen/: Cargo.toml
crates/symagen/src/: augmentation.rs  random_data.rs  random_edits.rs
crates/symagen/tests/: test_random.rs
experiments/py-mbed/: pyproject.toml
papers/: README.md
papers/cakes/: .gitignore  Cargo.toml  README.md
papers/cakes/notebooks/: recurrence_relations.ipynb  tree_structure.ipynb
papers/cakes/py/: README.md  pyproject.toml
papers/cakes/src/: main.rs  utils.rs
papers/cakes/src/data/: mod.rs
papers/musals/: .gitignore  Cargo.toml  README.md
papers/musals/notebooks/: tree_structure.ipynb
papers/musals/py/: README.md  pyproject.toml
papers/musals/src/: main.rs  utils.rs
papers/musals/src/data/: mod.rs
pypi/distances/: Cargo.toml  pyproject.toml
pypi/distances/plots/: plot_strings.py  plot_vectors.py
pypi/distances/python/tests/: test_simd.py  test_vectors.py
pypi/distances/src/: lib.rs  simd.rs  utils.rs  vectors.rs
pypi/results/vis/: README.md  pyproject.toml
(+179 files in other folders)
