[workspace]
members = [
    "crates/abd-clam",
    "crates/distances",
    "crates/distances-two",
    "crates/symagen",
    "crates/shell",
    "pypi/distances",
    # "papers/cakes",
    # "papers/musals",
]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.90"  # using: `cargo publish --workspace`
license = "MIT"

# TODO: Najib: Rework the `lints` section after [this issue](https://github.com/rust-lang/cargo/issues/12918) is resolved.

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
correctness = { level = "deny", priority = -3 }
suspicious = { level = "warn", priority = -4 }
style = { level = "warn", priority = -5 }
complexity = { level = "warn", priority = -6 }
perf = { level = "warn", priority = -7 }
unwrap_used = { level = "warn", priority = -8 }
expect_used = { level = "warn", priority = -9 }
panic = { level = "warn", priority = -10 }
cast_lossless = { level = "warn", priority = -11 }
missing_docs_in_private_items = { level = "warn", priority = -12 }
unnecessary_debug_formatting = { level = "allow", priority = 1 }

[workspace.dependencies]
# Local crates.
abd-clam = { version = "0.34.0", path = "crates/abd-clam" }
distances = { version = "1.8.0", path = "crates/distances" }
symagen = { version = "0.5.0", path = "crates/symagen" }
# Crate dependencies.
num-traits = "0.2"
rayon = "1.11"
rand = "0.10"
profi = { version = "0.1", default-features = false }
serde = "1.0"
databuf = "0.5"
libm = "0.2"
num-integer = "0.1"
rust-blas = "0.2"
clap = "4.5"
ftlog = "0.2"
numpy = "0.26"
pyo3 = "0.26"
csv = "1.4"
num = "0.4"
bio = "3.0"
bytecount = "0.6"
enum_dispatch = "0.3"
# Dev dependencies.
test-case = "3.2.1"
criterion = "0.8"
ndarray = "0.16"
ndarray-npy = "0.9"
stringzilla = "4.2"
serde_json = "1.0"
float_eq = "1.0"
serde_yaml = "0.9"
ordered-float = "5.1"

[profile.test]
opt-level = 3
debug = true
overflow-checks = true

[profile.release]
lto = true
codegen-units = 1
