[project]
name = "clam"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Najib Ishaq", email = "najib_ishaq@zoho.com" },
    { name = "Tom", email = "info@tomhoward.codes" },
]
dependencies = [
    "numpy>=1.23,<2.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pre-commit>=3.7,<4.0",
    "bump2version>=1.0,<2.0",
    "pytest>=8.2,<9.0",
    "pytest-xdist>=3.6,<4.0",
    "pytest-sugar>=1.0,<2.0",
    "pytest-cov>=5.0,<6.0",
    "richbench>=1.0,<2.0",
    "typer==0.12.3",
]

[tool.rye.workspace]
members = [
    "pypi/distances",
    "pypi/results/vis",
]
