[project]
name = "clam"
version = "0.1.0"
description = "The CLAM workspace is a collection of Rust crates and Python packages."
authors = [
    { name = "Najib Ishaq", email = "najib_ishaq@zoho.com" },
    { name = "Tom Howard", email = "info@tomhoward.codes" },
]
dependencies = [
    "faiss-cpu>=1.12.0",
    "ipykernel>=6.30.1",
    "pydantic>=2.12.5",
]
readme = "README.md"
requires-python = ">= 3.13"

[tool.uv]
managed = true
package = false

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.2.2",
    "pytest-xdist>=3.6.1",
    "pytest-sugar>=1.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.11.8",
    "mypy>=1.15.0",
    "pip>=25.1.1",
]

[tool.uv.workspace]
members = [
    "pypi/distances",
    "papers/cakes/py",
    "papers/musals/py",
]

[tool.uv.sources]
abd-distances = { workspace = true }
py-mbed = { workspace = true }
paper-cakes = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
disable_error_code = ["import-untyped"]
