[project]
name = "clam"
version = "0.1.0"
description = "The CLAM workspace is a collection of Rust crates and Python packages."
authors = [
    { name = "Najib Ishaq", email = "najib_ishaq@zoho.com" },
    { name = "Tom Howard", email = "info@tomhoward.codes" },
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.13"

[tool.uv]
managed = true
package = false

[dependency-groups]
dev = ["pre-commit>=4.6.0", "pytest>=9.0.3"]

[tool.uv.workspace]
members = ["bindings/python/distances"]

[tool.uv.sources]
abd-distances = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
disable_error_code = ["import-untyped"]
