[package]
name = "abd-clam"
version = "0.32.0"
authors = [
    "Najib Ishaq <najib_ishaq@zoho.com>",
    "Tom Howard <info@tomhoward.codes>",
    "Noah Daniels <noah_daniels@uri.edu>",
    "Morgan Prior <morgan_prior@uri.edu>",
    "Isaac Chen <ijchen@uri.edu>",
    "Oliver McLaughlin <olwmcjp@gmail.com>",
]
edition = "2021"
rust-version = "1.86"  # using: `next_up`
description = "Clustering, Learning and Approximation with Manifolds"
license = "MIT"
readme = "./README.md"
documentation = "https://docs.rs/abd-clam/latest/abd_clam/"
repository = "https://github.com/URI-ABD/clam"
homepage = "https://github.com/URI-ABD/clam"

# Publishing lock.
# When you're ready to start publishing, set publish to true
# and update the release github action.
publish = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { workspace = true, features = ["libm"] }
rayon = { workspace = true }
rand = { workspace = true }
profi = { workspace = true, default-features = false, features = ["rayon"] }
serde = { workspace = true, features = ["derive"], optional = true }
bitcode = { workspace = true, features = ["derive"], optional = true }
csv = { workspace = true, optional = true }

# For:
#  - CHAODA
# smartcore = { workspace = true, features = ["serde"], optional = true }

# For:
#  - MSA
# stringzilla = { workspace = true, optional = true, features = ["cpus"] }

# For:
#  - The mass-spring-system in the dimension reduction
# slotmap = { workspace = true, optional = true }

[dev-dependencies]
symagen = { workspace = true }
test-case = { workspace = true }
criterion = { workspace = true, features = ["html_reports", "csv_output"] }
ndarray = { workspace = true }
ndarray-npy = { workspace = true }
distances = { workspace = true }

[features]
profile = ["profi/enable"]
all = ["serde"]
serde = ["dep:serde", "dep:bitcode", "dep:csv"]
# musals = ["dep:stringzilla"]
# disk-io = ["dep:flate2"]
# chaoda = ["dep:smartcore"]
# mbed = ["chaoda", "dep:slotmap"]

[[bench]]
name = "cakes"
harness = false
