[package]
name = "abd-clam"
version = "0.34.0"
authors = [
    "Najib Ishaq <najib_ishaq@zoho.com>",
    "Tom Howard <info@tomhoward.codes>",
    "Noah Daniels <noah_daniels@uri.edu>",
    "Morgan Prior <morgan_prior@uri.edu>",
    "Isaac Chen <ijchen@uri.edu>",
    "Oliver McLaughlin <olwmcjp@gmail.com>",
]
description = "Clustering, Learning and Approximation with Manifolds"
readme = "./README.md"
documentation = "https://docs.rs/abd-clam/latest/abd_clam/"
repository = "https://github.com/URI-ABD/clam"
homepage = "https://github.com/URI-ABD/clam"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Publishing lock.
# When you're ready to start publishing, set publish to true
# and update the release github action.
publish = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { workspace = true, features = ["libm"] }
rayon = { workspace = true }
rand = { workspace = true }
ftlog = { workspace = true }
profi = { workspace = true, default-features = false, features = ["rayon"] }
serde = { workspace = true, features = ["derive"], optional = true }
databuf = { workspace = true, optional = true }
num = { workspace = true, optional = true }
bytecount = { workspace = true, optional = true }

# For:
#  - CHAODA
# smartcore = { workspace = true, features = ["serde"], optional = true }

# For:
#  - The mass-spring-system in the dimension reduction
# slotmap = { workspace = true, optional = true }

[dev-dependencies]
symagen = { workspace = true }
test-case = { workspace = true }
criterion = { workspace = true, features = ["html_reports", "csv_output"] }
ndarray = { workspace = true }
ndarray-npy = { workspace = true }
distances = { workspace = true }
ordered-float = { workspace = true }

[features]
serde = ["dep:serde", "dep:databuf"]
musals = ["dep:num", "dep:bytecount"]
pancakes = []
all = ["serde", "musals", "pancakes"]
profile = ["profi/enable"]
# chaoda = ["dep:smartcore"]
# mbed = ["chaoda", "dep:slotmap"]

[[bench]]
name = "cakes"
harness = false
