[package]
name = "abd-clam"
version = "0.31.0"
authors = [
    "Najib Ishaq <najib_ishaq@zoho.com>",
    "Tom Howard <info@tomhoward.codes>",
    "Noah Daniels <noah_daniels@uri.edu>",
    "Morgan Prior <morgan_prior@uri.edu>",
    "Isaac Chen <ijchen@uri.edu>",
    "Oliver McLaughlin <olwmcjp@gmail.com>",
]
description = "Clustering, Learning and Approximation with Manifolds"
readme = "./README.md"
documentation = "https://docs.rs/abd-clam/latest/abd_clam/"
repository = "https://github.com/URI-ABD/clam"
homepage = "https://github.com/URI-ABD/clam"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Publishing lock.
# When you're ready to start publishing, set publish to true
# and update the release github action.
publish = false

[lints]
workspace = true

[features]
serde = ["dep:serde", "dep:databuf"]
pancakes = ["dep:deepsize"]
musals = ["dep:num"]
all = ["serde", "musals", "pancakes"]
shell = [
    "all",
    "dep:clap",
    "dep:ndarray",
    "dep:ndarray-npy",
    "dep:serde_json",
    "dep:yaml_serde",
    "dep:bio",
    "dep:rapidfuzz",
]
profile = ["profi/enable"]

[[bin]]
name = "clam-shell"
path = "src/bin/shell/main.rs"
required-features = ["shell"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { workspace = true, features = ["libm"] }
rayon = { workspace = true }
rand = { workspace = true }
ftlog = { workspace = true }
profi = { workspace = true, default-features = false, features = ["rayon"] }
serde = { workspace = true, features = ["derive"], optional = true }
databuf = { workspace = true, optional = true }
num = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"], optional = true }
ndarray = { workspace = true, optional = true }
ndarray-npy = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
yaml_serde = { workspace = true, optional = true }
bio = { workspace = true, optional = true }
lazy-regex = { workspace = true }
tqdm = { workspace = true }
deepsize = { workspace = true, features = ["derive"], optional = true }
rapidfuzz = { workspace = true, optional = true }

[dev-dependencies]
test-case = { workspace = true }
