[package]
name = "cakes-results"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abd-clam = { path = "../abd-clam" }
distances = { path = "../distances" }
symagen = { path = "../SyMaGen" }

ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-npy = "0.8.1"

serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.105"

num-complex = { version = "0.4.4", features = ["serde"] }

clap = { version = "4.4.4", features = ["derive"] }
num-format = "0.4.4"
csv = "1.2.2"
rand = "0.8.5"
rayon = "1.8.0"
mt_logger = "3.0.2"
hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git", rev = "2e44e9033cb06551fea9769a816eca4895b6267a" }
