[package]
name = "shell"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
abd-clam = { workspace = true, features = ["all"] }
distances = { workspace = true }
clap = { workspace = true, features = ["derive"] }
bitcode = { workspace = true, features = ["serde"] }
ndarray.workspace = true
ndarray-npy.workspace = true
serde = { workspace = true, features = ["derive"] }
rand.workspace = true
rayon.workspace = true
ftlog.workspace = true
