[package]
name = "shell"
version = "0.1.0"
edition = "2024"

[dependencies]
abd-clam = { workspace = true, features = ["all"] }
distances = { workspace = true }
symagen = { workspace = true }
clap.workspace = true
bitcode = { workspace = true, features = ["serde"] }
ndarray.workspace = true
ndarray-npy.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bio.workspace = true
rand.workspace = true
rayon.workspace = true
ftlog.workspace = true
