[package]
name = "shell"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
abd-clam = { workspace = true, features = ["all"] }
distances = { workspace = true }
symagen = { workspace = true }
clap = { workspace = true, features = ["derive"] }
databuf = { workspace = true }
ndarray.workspace = true
ndarray-npy.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
bio.workspace = true
rand.workspace = true
rayon.workspace = true
ftlog.workspace = true
stringzilla = { workspace = true, features = ["cpus"] }
