[package]
name = "symagen"
version = "0.5.0"
authors = [
    "Morgan Prior <meprior424@gmail.com>",
    "Najib Ishaq <najib_ishaq@zoho.com>",
]
description = "Synthetic manifold generation."
readme = "./README.md"
documentation = "https://docs.rs/symagen/latest/symagen/"
repository = "https://github.com/URI-ABD/clam"
homepage = "https://github.com/URI-ABD/clam"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Publishing lock.
# When you're ready to start publishing, set publish to true
# and update the release github action.
publish = true

[lints]
workspace = true

[dependencies]
distances = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
