[project]
name = "py-mbed"
version = "0.1.0"
description = "Experiments with Dimension Reduction with CLAM-MBED."
readme = "README.md"
authors = [
    { name = "Najib Ishaq", email = "najib_ishaq@zoho.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[project.scripts]
py-mbed = "py_mbed.__main__:app"
