[package]
name = "paper-cakes"
version = "0.1.0"
edition = "2024"

[dependencies]
abd-clam = { workspace = true }
clap = { workspace = true, features = ["derive"] }
distances.workspace = true
ftlog = "0.2.15"
ndarray.workspace = true
ndarray-npy.workspace = true
rand.workspace = true
rayon.workspace = true

[lints]
workspace = true
