[package]
name = "paper-musals"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

publish = false

[dependencies]
abd-clam = { workspace = true, features = ["all"] }
clap = { workspace = true, features = ["derive"] }
distances.workspace = true
ftlog = { workspace = true }
ndarray.workspace = true
ndarray-npy.workspace = true
rand.workspace = true
serde_json = { workspace = true }

[lints]
workspace = true
