[package]
name = "abd-distances"
version = "1.0.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "abd_distances"
crate-type = ["cdylib"]

[dependencies]
distances = { workspace = true }
ndarray = { workspace = true, features = ["rayon"] }
numpy = { workspace = true }
pyo3 = { workspace = true, features = ["abi3"] }
