[project]
name = "abd-distances"
description = "Distance functions: A drop-in replacement for, and a super-set of the scipy.spatial.distance module."
version = "1.0.4"
requires-python = ">=3.13"
keywords = ["distance", "metric", "simd"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=2.0",
]

[dependency-groups]
dev = [
    "seaborn>=0.13.2",
    "editdistance>=0.8.1",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "richbench>=1.0.3",
    "types-seaborn>=0.13.2.20250516",
    "types-tqdm>=4.67.0.20250516",
    "types-editdistance>=0.8.0.20250401",
]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]
profile = "release"

[tool.mypy]
disable_error_code = ["import-untyped"]
