[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vis"
description = "Experiments with CLAM's dimensionality reduction features."
version = "0.1.0"
requires-python = ">= 3.9"
classifiers = [
    "Programming Language :: Python",
]
dependencies = [
    "numpy>=2.0.0",
    "umap-learn>=0.5.6",
]

[tool.rye]
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/vis"]
